--- a/wallshare/public/index.html
+++ b/wallshare/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app" class="w-full h-full"></div>
     <!-- built files will be auto injected -->
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
   </body>
 </html>
