--- a/wallshare/public/index.html
+++ b/wallshare/public/index.html
@@ -14,5 +14,6 @@
     <div id="app" class="w-full h-full"></div>
     <!-- built files will be auto injected -->
     <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
   </body>
 </html>
